--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query-devtools": "^5.18.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
