--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.5.0",
+    "@stripe/stripe-js": "^3.0.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.18.0",
+    "@types/stripe": "^8.0.417",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "lucide-react": "^0.319.0",
     "next": "14.1.0",
+    "persist-and-sync": "^1.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "socket.io": "^4.7.4",
+    "stripe": "^14.17.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
