--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "clsx": "^2.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "lucide-react": "^0.319.0",
-    "next": "14.1.0",
+    "next": "^14.1.3",
     "persist-and-sync": "^1.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
@@ -48,7 +48,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^14.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-testing-library": "^6.2.0",
