--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.18.0",
+    "@types/socket.io-client": "^3.0.0",
     "@types/stripe": "^8.0.417",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -31,6 +32,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "stripe": "^14.17.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
