--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "^14.1.3",
     "persist-and-sync": "^1.2.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
@@ -47,6 +48,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
