--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.1.2",
+    "whatwg": "^2.0.0",
+    "whatwg-fetch": "^3.6.20",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
@@ -56,6 +58,7 @@
     "eslint-plugin-testing-library": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^1.3.2",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
